# ai-code-review

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml  ml-pipeline-ci.yml  review-bot-ci.yml
infra/: docker-compose.yml
infra/grafana/dashboards/: cost-tracking.json  llm-provider-performance.json  review-bot-overview.json  review-quality.json
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/grafana/provisioning/datasources/: datasource.yml
infra/k8s/monitoring/: service-monitor.yml  servicemonitor.yml
infra/k8s/review-bot/: configmap.yml  deployment.yml  hpa.yml  secret.yml  service.yml
infra/k8s/vllm/: deployment.yml  service.yml
infra/prometheus/: alert-rules.yml  alertmanager.yml  prometheus.yml
ml-pipeline/: pyproject.toml
ml-pipeline/data/analysis/: eda.py
ml-pipeline/data/collector/: __init__.py  config.py  deduplicator.py  github_client.py  pr_collector.py
ml-pipeline/data/preprocessor/: __init__.py  cleaner.py  exporter.py  formatter.py  pipeline.py  tokenizer.py
ml-pipeline/evaluation/: evaluate.py  report.py
ml-pipeline/evaluation/metrics/: bleu_metric.py  llm_judge.py  rouge_metric.py
ml-pipeline/serving/: Dockerfile  vllm_server.py
ml-pipeline/tests/data/collector/: test_deduplicator.py  test_github_client.py
ml-pipeline/tests/data/preprocessor/: test_cleaner.py  test_formatter.py  test_tokenizer.py
ml-pipeline/training/: callbacks.py  lora_config.py  train.py
ml-pipeline/training/config/: base_config.yaml
review-bot/: .env.example  Dockerfile  build.gradle.kts  settings.gradle.kts
(+67 files in other folders)
