[project]
name = "ai-code-review-ml"
version = "0.1.0"
description = "ML Pipeline for AI Code Review Bot - Data collection, fine-tuning, evaluation"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pymongo>=4.10.0",
    "pandas>=2.2.0",
    "tiktoken>=0.8.0",
    "transformers>=4.47.0",
    "peft>=0.14.0",
    "trl>=0.13.0",
    "bitsandbytes>=0.45.0",
    "datasets>=3.2.0",
    "mlflow>=2.19.0",
    "vllm>=0.6.0",
    "accelerate>=1.2.0",
    "torch>=2.5.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.0",
    "sacrebleu>=2.4.0",
    "nltk>=3.9.0",
    "rouge-score>=0.1.2",
    "anthropic>=0.40.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["data", "training", "evaluation", "serving"]
